# cookbook-backend

./: .gitignore  .gitlab-ci.yml  BUILD  LICENSE.md  README.md  WORKSPACE  api.yml  build.gradle  build.gradle.kts  circle.yml  cookbook.yml  dev.conf  go.mod  go.sum  package.json  punchcard-db.json  settings.gradle  tsconfig.json
.circleci/: bazel.rc  config.yml  move-test-out.js
auth-server/: auth-server.yml  build.gradle
auth-server/src/main/kotlin/: AuthApplication.kt  AuthConfiguration.kt
auth-server/src/main/kotlin/data/: UserDao.kt
auth-server/src/main/kotlin/managers/: AuthManager.kt
auth-server/src/main/kotlin/resources/: LoginResource.kt
auth-server/src/main/resources/: migrations.xml
auth-server/src/test/kotlin/data/: UserDaoTest.kt
auth-server/src/test/kotlin/managers/: AuthManagerTest.kt
bagelc/: README.md
bagelc/parser/: BUILD  README.md
bagelc/parser/src/: lib.rs
bzl/dagger/: BUILD
bzl/parcel/: BUILD  parcel.bzl
bzl/webpack/: webpack.bzl
cookbook/: README.md  cookbook.yml
cookbook/models/: BUILD
cookbook/models/src/main/: BUILD
cookbook/models/src/main/kotlin/: BUILD  Recipe.kt
cookbook/models/src/test/: BUILD
cookbook/models/src/test/kotlin/: RecipeEggTest.kt  RecipeTest.kt
cookbook/models/src/test/resources/: recipe-egg-absent-field.json
cookbook/server/: BUILD
cookbook/server/src/main/kotlin/: ApplicationModule.kt  BUILD  CookbookApplication.kt
cookbook/server/src/main/kotlin/auth/: BUILD  TrivialAuth.kt
cookbook/server/src/main/kotlin/base/: BUILD  BaseModule.kt
cookbook/server/src/main/kotlin/config/: AuthType.kt  BUILD  CookbookConfiguration.kt
cookbook/server/src/main/kotlin/data/: BUILD  DataModule.kt  MigrationsBundle.kt  RecipeData.kt
cookbook/server/src/main/kotlin/resources/: BUILD  RecipesResource.kt
cookbook/server/src/main/resources/: BUILD
cookbook/server/src/test/: BUILD
cookbook/server/src/test/kotlin/data/: Helpers.kt  RecipeDataTest.kt
core/: build.gradle
core/src/main/kotlin/: RecipeEgg.kt  TokenBearer.kt  User.kt
diffhighlight/: BUILD
diffhighlight/src/: main.rs
frontend/: .gitignore  build.gradle  package.json  tsconfig.json  webpack.config.common.js  webpack.config.dev.js  webpack.config.js  webpack.config.prod.js
frontend/src/: index.ts
frontend/src/components/: Body.ts  Card.ts  Main.ts  Sidebar.ts  Topmatter.ts
frontend/src/components/detail/: Detail.ts
frontend/src/components/home/: Card.ts  Home.ts
frontend/src/data/: Recipe.ts  State.ts
frontend/src/ducks/: recipes.ts
frontend/test/: index.test.ts
frontend/test/ducks/: recipes.test.ts
frontend/test/nested/: index.test.ts
gmaild/: BUILD.bazel  README.md  gmaild.go  gmaild_test.go  go.mod  go.sum
go-assert/: BUILD.bazel  README.md  assert.go  assert_test.go  go.mod
gradle/: docker.gradle  junit.gradle  kotlin.gradle
gradle/wrapper/: gradle-wrapper.properties
jwt-authenticator/: build.gradle
kotlin-dropwizard-dsl/: BUILD  README.md  build.gradle  build.gradle.kts
kotlin-dropwizard-dsl/src/main/kotlin/: BootstrapConfiguration.kt  Configuration.kt  DslAnnotations.kt  EnvironmentConfiguration.kt
kotlin-dropwizard-dsl/src/main/kotlin/configuration/: BootstrapConfiguration.kt  Configuration.kt  DslAnnotations.kt  EnvironmentConfiguration.kt
kotlin-dropwizard-dsl/src/main/kotlin/response/: Response.kt
mvb/: BUILD  README.md
mvb/src/: cli.rs  lib.rs  main.rs
pi_mail/: BUILD.bazel  go.mod  go.sum  main.go
proto/strava/: BUILD  strava-api.proto
punchcard/: BUILD  README.md  config.yml  gopostinst.sh  goprerm.sh  gopunchcard.service  postinst.sh  prerm.sh  punchcard-db.json  punchcard.service
punchcard-server/: .gitignore  build.gradle  build.gradle.kts  punchcard-dev.yml  punchcard.service  punchcard.test.yml
punchcard-ui/: db.json  package.json  tsconfig.json
punchcard-ui/public/: index.html
punchcard-ui/src/: App.test.tsx  App.tsx  setupProxy.js
punchcard-ui/src/@types/react-heatmap-grid/: index.d.ts
punchcard-ui/src/heatmap/: WeekMap.tsx  actions.test.ts  actions.ts
punchcard/go-server/: BUILD.bazel  config.go  go.mod  go.sum  oauth.go  server.go  stats.go  stats_test.go
punchcard/server/: BUILD
punchcard/server/src/main/resources/: BUILD  sentry.properties
punchcard/ui/: .gitignore  BUILD  build.sh  index.html
punchcard/ui/src/: app.ts  app.tsx
punchcard/ui/src/heatmap/: WeekMap.tsx  actions.ts
punchcard/ui/src/templates/: main.vue
recipe-api/: build.gradle  build.gradle.kts
recipe-server/: build.gradle  build.gradle.kts
recipe-server/server/src/main/resources/: migrations.xml
recipe-server/server/src/test/resources/fixtures/: recipe-egg.json
resume/: BUILD  resume.ltx
sentry-appender/: BUILD  README.md  build.gradle  build.gradle.kts
sentry-appender/src/test/kotlin/: SentryAppenderFactoryTest.kt
server/: build.gradle
server-punchcard/: build.gradle
server-punchcard/src/main/resources/: banner.txt
server/src/main/resources/: banner.txt  sentry.properties
src/main/kotlin/com/github/ptrteixeira/cookbook/: ApplicationComponent.kt  ApplicationModule.kt  CookbookApplication.kt  CookbookConfiguration.kt  Main.kt  Utils.kt
src/main/resources/: log4j2.yml  migrations.xml
src/test/resources/fixtures/: not-found-error.json  recipe-egg.json  recipe.json
strava/: BUILD.bazel  README.md  athlete.go  athlete_test.go  client.go  client_test.go  config.go  go.mod
strava-api/: BUILD  README.md  build.gradle  build.gradle.kts
strava-api/src/main/kotlin/: BUILD  IStravaService.kt  StravaApi.kt  StravaService.kt
strava-api/src/main/kotlin/models/: Athlete.kt  AthleteActivitiesResponse.kt  BUILD  TokenResponse.kt
strava-api/src/test/kotlin/: BUILD  StravaServiceTest.kt
strava-api/src/test/kotlin/models/: BUILD  TokenResponseTest.kt
strava-api/src/test/resources/: golden_token_response.json
strava/api/: BUILD.bazel  api.go  api_test.go  go.mod
strava/client/: BUILD.bazel  athlete.go  athlete_test.go  client.go  client_test.go  config.go  go.mod  go.sum
support/: build.gradle
(+119 files in other folders)
