load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/PtrTeixeira/cookbook/pi_mail",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_spf13_pflag//:go_default_library",
        "@org_golang_google_api//gmail/v1:go_default_library",
        "@org_golang_x_oauth2//:go_default_library",
        "@org_golang_x_oauth2//google:go_default_library",
    ],
)

go_binary(
    name = "gmaild",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
