load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["gmaild.go"],
    importpath = "github.com/PtrTeixeira/cookbook/gmaild",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_spf13_pflag//:go_default_library",
        "@org_golang_google_api//gmail/v1:go_default_library",
        "@org_golang_x_oauth2//:go_default_library",
        "@org_golang_x_oauth2//google:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["gmaild_test.go"],
    embed = [":go_default_library"],
    importpath = "github.com/PtrTeixeira/cookbook/gmaild",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "gmaild",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
