load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["assert.go"],
    importpath = "github.com/PtrTeixeira/cookbook/go-assert",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["assert_test.go"],
    embed = [":go_default_library"],
)
